--- a/css/content.css
+++ b/css/content.css
@@ -12,11 +12,12 @@
 }
 
 .ticket {
+  margin: auto;
   padding-top: 50px;
-  width: 100%;
+  width: 90%;
   height: 50vw;
   background-image: url(../pictures/png/atlas.png);
-  background-size: 85%;
+  background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
   text-align: center;
@@ -34,10 +35,7 @@
   margin-bottom: 1.3vw;
 }
 .ticket .ticket_img {
-  -webkit-box-ordinal-group: 0;
-      -ms-flex-order: -1;
-          order: -1;
-  width: 70%;
+  width: 55%;
 }
 .ticket .ticket_block_taimer {
   margin-top: 2vw;
@@ -81,7 +79,7 @@
   margin-bottom: 3vw;
 }
 .place .place_map {
-  width: 100%;
+  width: 80%;
   height: 30vw;
 }
 
